--- a/templates/list_hotels.html
+++ b/templates/list_hotels.html
@@ -12,7 +12,7 @@
 <h1 class="page-title heading">Lodgings</h1>
 
 {% for hotel in hotels %}
-    <h2><a class="hotel-name" href="{{ url_for('showHotel', hotel_id=hotel.id) }}">{{ hotel.name }}</a></h2>
+    <h2><a class="hotel-name" href="{{ url_for('showHotel', hotel_id=hotel.id) }}"><span class="img" style="background-image:url('https://www.ichinobo.com/daikon-no-hana/images/home/img_spa2.jpg');"></span>{{ hotel.name }}</a></h2>
     <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 48 48">
         <path d="M0 0h48v48h-48z" fill="none"/>
         <path d="M14 26c3.31 0 6-2.69 6-6s-2.69-6-6-6-6 2.69-6 6 2.69 6 6 6zm24-12h-16v14h-16v-18h-4v30h4v-6h36v6h4v-18c0-4.42-3.58-8-8-8z"/>
