--- a/templates/base.html
+++ b/templates/base.html
@@ -44,13 +44,16 @@
 
         <div class="spacer">
         </div>
-        
+
         <content class="content">
             <div class="container content-container">
             {% block body %}
             {% endblock %}
             </div>
         </content>
+
+        <div class="spacer">
+        </div>
 
         <footer class="footer">
             <p class="footer--info">Copyright © 2018, Miles Whitman</p>
