--- a/templates/list_hotels.html
+++ b/templates/list_hotels.html
@@ -11,27 +11,25 @@
 {% endwith %}
 <h1 class="page-title heading">Lodgings</h1>
 <h2 class="subtitle">Categories</h2>
-
-<!-- TODO:Figure out how to display categories -->
-<div class="hotels">
+<div class="main-div">
     <ul>
-    {% for hotel in category %}
+        {% for hotel in hotels_by_category %}
         <li>
-            <a class="categories" href="{{ url_for('listHotelsByCategory', category=category[0]) }}">{{ category[0] }}<span class="img" {% if hotel.picture %}style="background-image:url('{{ hotel.picture }}');"{% else %}style="background-image:url('/static/img/Ic_hotel_48px.svg');"{% endif %}></span>
+            <a class="hotel category--name img" href="{{ url_for('listHotels', hotels_by_category=hotels_by_category) }}" title="{{ hotel.category }}"><span class="img" {% if hotel.picture %}style="background-image:url('{{ hotel.picture }}');"{% else %}style="background-image:url('/static/img/Ic_hotel_48px.svg');"{% endif %}></span>
             </a>
-            <a class="categories" href="{{ url_for('showHotel', hotel_id=hotel.id) }}" title="{{ hotel.name }}">{{ hotel.name }}</a>
+            <a class="hotel category name-text" href="{{ url_for('listHotels', hotels_by_category=hotels_by_category) }}" title="{{ hotel.category }}">{{ hotel.category }}</a>
         </li>
-    {% endfor %}
+        {% endfor %}
     </ul>
 </div>
 
-<div class="hotels">
+<div class="sidebar">
     <ul>
     {% for hotel in hotels %}
         <li>
-            <a class="hotel-name img" href="{{ url_for('showHotel', hotel_id=hotel.id) }}" title="{{ hotel.name }}"><span class="img" {% if hotel.picture %}style="background-image:url('{{ hotel.picture }}');"{% else %}style="background-image:url('/static/img/Ic_hotel_48px.svg');"{% endif %}></span>
+            <a class="hotel name img" href="{{ url_for('showHotel', hotel_id=hotel.id) }}" title="{{ hotel.name }}"><span class="img" {% if hotel.picture %}style="background-image:url('{{ hotel.picture }}');"{% else %}style="background-image:url('/static/img/Ic_hotel_48px.svg');"{% endif %}></span>
             </a>
-            <a class="hotel-name" href="{{ url_for('showHotel', hotel_id=hotel.id) }}" title="{{ hotel.name }}">{{ hotel.name }}</a>
+            <a class="hotel name-text" href="{{ url_for('showHotel', hotel_id=hotel.id) }}" title="{{ hotel.name }}">{{ hotel.name }}</a>
         </li>
     {% endfor %}
     </ul>
