--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,9 @@
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
 
         <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Barlow+Semi+Condensed|Fredericka+the+Great" rel="stylesheet">
+
+        {% block head %}
+        {% endblock %}
     </head>
 
     <body>
