--- a/static/css/style.css
+++ b/static/css/style.css
@@ -76,6 +76,11 @@ a {
     margin-top: 4px;
     width: 30px; }
 
+.flashes {
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%; }
+
 .spacer-1 {
   height: 85px; }
 
@@ -106,20 +111,19 @@ li {
   padding-left: 72px;
   position: relative;
   text-transform: uppercase;
-  width: 150px; }
+  width: 500px; }
 
 .main-div {
   float: none;
   width: 100%; }
+  .main-div li {
+    left: 30px;
+    position: relative;
+    top: 45px; }
 
 .sidebar {
   float: none;
   width: 100%; }
-
-.main-div li {
-  position: relative;
-  left: 30px;
-  top: 45px; }
 
 .hotel span {
   background-position: center;
