--- a/templates/login.html
+++ b/templates/login.html
@@ -2,59 +2,67 @@
 
 {% block head %}
 <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
-</script>
-
-<script src="//apis.google.com/js/platform.js?onload=start"> </script>
-
+<html itemscope itemtype="http://schema.org/Article">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://apis.google.com/js/client:platform.js?onload=start" async defer></script>
 <!-- END PRE-REQUISITES FOR GOOGLE SIGN IN -->
+<script>
+  function start() {
+    gapi.load('auth2', function() {
+      auth2 = gapi.auth2.init({
+        client_id: '936000743443-1lb8midi1epefonrqg2r55cdoiag0tgg.apps.googleusercontent.com',
+        // Scopes to request in addition to 'profile' and 'email'
+        //scope: 'additional_scope'
+      });
+    });
+  }
+</script>
 {% endblock %}
 
 {% block body %}
-<h1 class="page-title heading">Login</h1>
-<p class="sub-text">Don't have an account? <a class="link" href="#">Sign up!</a></p>
 
-<!-- GOOGLE PLUS SIGN IN BUTTON -->
-
-<div id="signinButton">
-  <span class="g-signin"
-    data-scope="openid email"
-    data-clientid="936000743443-1lb8midi1epefonrqg2r55cdoiag0tgg.apps.googleusercontent.com"
-    data-redirecturi="postmessage"
-    data-accesstype="offline"
-    data-cookiepolicy="single_host_origin"
-    data-callback="signInCallback"
-    data-approvalprompt="force">
-  </span>
-</div>
-<div id="result"></div>
-<!--END GOOGLE PLUS SIGN IN BUTTON -->
+<!-- GOOGLE SIGN IN BUTTON -->
+<button id="signinButton">Sign in with Google</button>
+<script>
+  $('#signinButton').click(function() {
+    // signInCallback defined in step 6.
+    auth2.grantOfflineAccess().then(signInCallback);
+  });
+</script>
+<!-- /GOOGLE SIGNIN BUTTON -->
 
 <script>
 function signInCallback(authResult) {
-    if (authResult['code']) {
-        $('#signinButton').attr('style', 'display: none');
+  if (authResult['code']) {
 
-        //Send the one-time-use code to the server. If the server responds, write a 'login successful' message to the web page, then redirect to the '/hotels' page.
-        $.ajax({
-            type: 'POST',
-            url: '/gconnect?state={{STATE}}',
-            processData: false,
-            contentType: 'application/octet-stream; charset=utf-8',
-            data: authResult['code'],
-            success: function(result) {
-                // Handle or verify the server response if necessary
-                if (result) {
-                    $('#result').html('Login Successful!</br>' + result + '</br>Redirecting...')
-                    setTimeout(function() {
-                        window.location.href = "/hotels";
-                    }, 4000);
-                } else if (authResult['error']) {
-                    console.log('There was an error: ' + authResult['error']);
-                } else {
-                    $('#result').html('Failed to make a server-side call. Check your configuration and consoe');
-                }
-            }
-        }); } }
+    // Hide the sign-in button now that the user is authorized, for example:
+    $('#signinButton').attr('style', 'display: none');
+
+    // Send the code to the server
+    $.ajax({
+      type: 'POST',
+      url: '/gconnect?state={{STATE}}',
+      // Always include an `X-Requested-With` header in every AJAX request,
+      // to protect against CSRF attacks.
+      headers: {
+        'X-Requested-With': 'XMLHttpRequest'
+      },
+      contentType: 'application/octet-stream; charset=utf-8',
+      success: function(result) {
+          if (result) {
+            $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
+           setTimeout(function() {
+            window.location.href = "/hotels";
+        }, 4000);}
+      },
+      processData: false,
+      data: authResult['code']
+    });
+  } else if (authResult['error']) {
+    console.log('There was an error: ' + authResult['error']);
+  } else {
+        $('#result').html('Failed to make a server-side call. Check your configuration and console.');
+         }
+}
 </script>
 {% endblock %}
