--- a/templates/list_hotel_categories.html
+++ b/templates/list_hotel_categories.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block head %}
+<meta name="Description" content="List the different types or categories of hotels or lodgings.">
+{% endblock %}
 {% block body %}
 
 <h1 class="page-title heading">What kind of lodging are you looking for?</h1>
