--- a/templates/list_hotels_by_category.html
+++ b/templates/list_hotels_by_category.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block head %}
+<meta name="Description" content="List all of the hotels in certain category or of a certain type.">
+{% endblock %}
 {% block body %}
 
 <h1 class="page-title heading">{{ category }}</h1>
