--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,7 +19,15 @@ body {
   width: 100%; }
 
 .content-container {
-  margin-top: 100px; }
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  width: 85%; }
+
+.content-container2 {
+  margin-left: auto;
+  margin-right: auto;
+  width: 85%; }
 
 a {
   color: #a30404; }
@@ -52,7 +60,7 @@ a {
   width: 100%; }
 
 .navbar-brand {
-  color: #302626;
+  color: #fff;
   float: left;
   font-family: "Fredericka the Great", cursive;
   font-size: 2rem;
@@ -76,16 +84,18 @@ a {
     margin-top: 4px;
     width: 30px; }
 
-.flashes {
+.flashes li {
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
   width: 50%; }
 
 .spacer-1 {
   height: 85px; }
 
 .page-title {
-  border-bottom: #302626 solid 1px; }
+  border-bottom: #302626 solid 1px;
+  line-height: 1.5em; }
 
 ul {
   display: block;
@@ -113,8 +123,16 @@ li {
   text-transform: uppercase;
   width: 500px; }
 
+.result {
+  left: 80px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  width: 50%; }
+
 .main-div {
   float: none;
+  margin-bottom: 70px;
   width: 100%; }
   .main-div li {
     left: 30px;
@@ -124,6 +142,27 @@ li {
 .sidebar {
   float: none;
   width: 100%; }
+  .sidebar li {
+    left: 30px;
+    position: relative;
+    top: 45px; }
+
+.hotels-btn {
+  background-color: #f70202;
+  color: #fff;
+  font-weight: bold;
+  height: 40px;
+  left: 20px;
+  margin: 8px;
+  padding-bottom: 10px;
+  padding-top: 8px;
+  position: relative;
+  text-align: center;
+  top: 40px;
+  width: 90px; }
+
+.signin-btn {
+  width: 150px; }
 
 .hotel span {
   background-position: center;
