--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="author" content="Miles Whitman">
+        <meta name="Author" content="Miles Whitman">
 
         <title>Hotel Listings</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -24,7 +24,7 @@
                   <div class="container-fluid">
                     <div class="navbar-header">
                       <a class="navbar-brand" href="#">山形Hotels</a>
-                      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                      <button type="button" class="navbar-toggle" title="Toggle navigation menu." data-toggle="collapse" data-target="#myNavbar">
                           <span class="icon-bar"></span>
                           <span class="icon-bar"></span>
                           <span class="icon-bar"></span>
@@ -47,7 +47,11 @@
             </header>
 
             <content>
-                <div class="container content-container">
+                <div class="content-container">
+                    {% block title %}
+                    {% endblock %}
+                </div>
+                <div class="content-container2">
                     {% block body %}
                     {% endblock %}
                 </div>
