Create authorization requirement to edit a hotel in list_hotels

--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
 {% block body %}
 
 <!-- GOOGLE SIGN IN BUTTON -->
-<button id="signinButton" class="btn hotels-btn">Sign in with Google</button>
+<button id="signinButton" class="btn signin-btn hotels-btn">Sign in with Google</button>
 <script>
   $('#signinButton').click(function() {
     // signInCallback defined in step 6.
