--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -47,6 +47,24 @@ body {
   width: 85%;
 }
 
+li {
+  border-bottom: $color-3 solid 1px;
+  box-sizing: border-box;
+  float: left;
+  font-size: 13px;
+  height: 115px;
+  line-height: 175px;
+  list-style: none;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
+  padding-left: 72px;
+  position: relative;
+  text-align: center;
+  text-transform: uppercase;
+  width: 50%;
+}
+
 a {
   color: $color-2;
 
@@ -57,7 +75,14 @@ a {
 }
 
 .navbar-nav {
-  float: right;
+  float: none;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+
+  li {
+    width: 100%;
+  }
 
   a {
     color: $color-4;
@@ -122,13 +147,16 @@ a {
   }
 }
 
-.flashes {
-  li {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    width: 50%;
-  }
+.center-text {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 50%;
+}
+
+.logged-in-user {
+  float: right;
+  margin: 10px;
 }
 
 .spacer-1 {
@@ -155,21 +183,6 @@ ul {
   }
 }
 
-li {
-  border-bottom: $color-3 solid 1px;
-  box-sizing: border-box;
-  float: left;
-  font-size: 13px;
-  height: 115px;
-  line-height: 175px;
-  list-style: none;
-  overflow: hidden;
-  padding-left: 72px;
-  position: relative;
-  text-transform: uppercase;
-  width: 500px;
-}
-
 .result {
   left: 80px;
   margin-left: auto;
@@ -182,23 +195,21 @@ li {
   float: none;
   margin-bottom: 70px;
   width: 100%;
-
-  li {
-    left: 30px;
-    position: relative;
-    top: 45px;
-  }
 }
 
 .sidebar {
   float: none;
   width: 100%;
+}
 
-  li {
-    left: 30px;
-    position: relative;
-    top: 45px;
-  }
+.profile-pic {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+  border-radius: 25px;
+  height: 50px;
+  width: 50px;
+  z-index: 3;
 }
 
 .hotels-btn {
@@ -246,10 +257,6 @@ li {
 .btn-danger {
   background-color: $color-2;
   border: 0;
-}
-
-.spacer-2 {
-  height: 65px;
 }
 
 .footer {
