--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,11 @@
 {% block body %}
 
 <!-- GOOGLE SIGN IN BUTTON -->
+{% if 'username' not in session %}
 <button id="signinButton" class="btn signin-btn hotels-btn">Sign in with Google</button>
+{% else %}
+<h3 class="center-text">You are already logged in!</br>Head on over to the <a class="sub-link" href="{{ url_for('listHotels', hotels=hotels) }}" title="Hotel listings">Hotel listings</a> page.
+{% endif %}
 <script>
   $('#signinButton').click(function() {
     // signInCallback defined in step 6.
