--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,9 @@
                   <div class="container-fluid">
                     <div class="navbar-header">
                       <a class="navbar-brand" href="#">山形Hotels</a>
+                      {% if 'username' in session %}
+                      <h4 class="logged-in-user">Hi, {{ session.username }}</h4>
+                      {% endif %}
                       <button type="button" class="navbar-toggle" title="Toggle navigation menu." data-toggle="collapse" data-target="#myNavbar">
                           <span class="icon-bar"></span>
                           <span class="icon-bar"></span>
@@ -38,8 +41,12 @@
                         <li><a href="#">Page 3</a></li>
                       </ul>
                       <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                        {%if 'username' not in session %}
+                        <li><a href="{{ url_for('showLogin') }}"><span class="glyphicon glyphicon-user"></span>Log In</a></li>
+                        {% else %}
+                        <li><a href="{{ url_for('gdisconnect') }}"><span class="glyphicon glyphicon-user"></span>Log Out</a></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> My Profile</a></li>
+                        {% endif %}
                       </ul>
                     </div>
                   </div>
@@ -55,6 +62,7 @@
                     {% block body %}
                     {% endblock %}
                 </div>
+                <div class"spacer-1"></div>
             </content>
 
             <footer class="footer">
