--- a/templates/show_hotel.html
+++ b/templates/show_hotel.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'header.html' %}
 {% block head %}
 <meta name="Description" content="Display information about a selected Yamagata City hotel.">
 {% endblock %}
