--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -52,13 +52,11 @@ li {
   box-sizing: border-box;
   float: left;
   font-size: 13px;
-  height: 115px;
-  line-height: 175px;
+  line-height: 4;
   list-style: none;
   margin-left: auto;
   margin-right: auto;
   overflow: hidden;
-  padding-left: 72px;
   position: relative;
   text-align: center;
   text-transform: uppercase;
@@ -87,7 +85,6 @@ a {
   a {
     color: $color-4;
     display: block;
-    padding: 14px 16px;
     text-align: center;
     text-decoration: none;
 
@@ -147,6 +144,14 @@ a {
   }
 }
 
+.navbar-right {
+  height: 30px;
+  margin-bottom: 0;
+  margin-right: 70px;
+  margin-top: 0;
+  width: 150px;
+}
+
 .center-text {
   margin-left: auto;
   margin-right: auto;
@@ -170,11 +175,6 @@ a {
 
 ul {
   display: block;
-  margin-block-end: 1em;
-  margin-block-start: 1em;
-  margin-inline-end: 0;
-  margin-inline-start: 0;
-  padding-inline-start: 40px;
 
   &::after {
     clear: both;
