--- a/templates/base.html
+++ b/templates/base.html
@@ -19,40 +19,8 @@
 
     <body>
         <div class="wrapper">
-            <header class="header">
-                <nav class="navbar navbar-inverse">
-                  <div class="container-fluid">
-                    <div class="navbar-header">
-                      <a class="navbar-brand" href="#">山形Hotels</a>
-                      {% if 'username' in session %}
-                      <h4 class="logged-in-user">Hi, {{ session.username }}</h4>
-                      {% endif %}
-                      <button type="button" class="navbar-toggle" title="Toggle navigation menu." data-toggle="collapse" data-target="#myNavbar">
-                          <span class="icon-bar"></span>
-                          <span class="icon-bar"></span>
-                          <span class="icon-bar"></span>
-                      </button>
-                    </div>
-                    <div class="collapse navbar-collapse" id="myNavbar">
-                      <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#">Page 1</a></li>
-                        <li><a href="#">Page 2</a></li>
-                        <li><a href="#">Page 3</a></li>
-                      </ul>
-                      <ul class="nav navbar-nav navbar-right">
-                        {%if 'username' not in session %}
-                        <li><a href="{{ url_for('showLogin') }}"><span class="glyphicon glyphicon-user"></span>Log In</a></li>
-                        {% else %}
-                        <li><a href="{{ url_for('gdisconnect') }}"><span class="glyphicon glyphicon-user"></span>Log Out</a></li>
-                        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> My Profile</a></li>
-                        {% endif %}
-                      </ul>
-                    </div>
-                  </div>
-                </nav>
-            </header>
-
+        {% block header %}
+        {% endblock %}
             <content>
                 <div class="content-container">
                     {% block title %}
@@ -62,7 +30,6 @@
                     {% block body %}
                     {% endblock %}
                 </div>
-                <div class"spacer-1"></div>
             </content>
 
             <footer class="footer">
