--- a/templates/delete_hotel.html
+++ b/templates/delete_hotel.html
@@ -1,17 +1,13 @@
-{% extends 'base.html' %}
+{% extends 'header.html' %}
 {% block head %}
 <meta name="Description" content="List all of the hotels in certain category or of a certain type.">
 {% endblock %}
 {% block body %}
 
-<h1 class="page-title heading">{{ category }}</h1>
+<h1 class="page-title heading">Delete {{ hotel.name }}</h1>
 
-{% for hotel in hotels %}
-    <h2><a class="hotel-name" href="{{ url_for('showHotel', hotel_id=hotel.id) }}">{{ hotel.name }}</a></h2>
-    <div class="profile-pic" style="background-image:url({{ creator.picture }})"></div>
-    <a href="{{ url_for('editHotel', hotel_id=hotel.id) }}" title="Edit {{ hotel.name }}" class="btn hotels-btn">Edit</a>
     <a href="{{ url_for('deleteHotel', hotel_id=hotel.id) }}" title="Delete {{ hotel.name }}" class="btn hotels-btn">Delete</a>
-{% endfor %}
+
 <a class="sub-link" href="{{ url_for('listHotels', hotels=hotels) }}">Cancel</a>
 
 {% endblock %}
