--- a/templates/edit_hotel.html
+++ b/templates/edit_hotel.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'header.html' %}
 {% block head %}
 <meta name="Description" content="Edit hotel or lodging information. Name of hotel, image, price, description, category, rating">
 {% endblock %}
