--- a/templates/list_hotel_categories.html
+++ b/templates/list_hotel_categories.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'header.html' %}
 {% block head %}
 <meta name="Description" content="List the different types or categories of hotels or lodgings.">
 {% endblock %}
