--- a/templates/list_hotels.html
+++ b/templates/list_hotels.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'header.html' %}
 {% block head %}
 <meta name="Description" content="List all of the recommended hotels in Yamagata City, Japan.">
 {% endblock %}
