--- a/templates/list_hotels_by_category.html
+++ b/templates/list_hotels_by_category.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'header.html' %}
 {% block head %}
 <meta name="Description" content="List all of the hotels in certain category or of a certain type.">
 {% endblock %}
