--- a/templates/new_hotel.html
+++ b/templates/new_hotel.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'header.html' %}
 {% block head %}
 <meta name="Description" content="Add a new entry to the list of hotels and lodgings.">
 {% endblock %}
